# rauncher

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  test.yml
data/: rauncher.desktop
src/: config.rs  error.rs  events.rs  main.rs  tray.rs  x11.rs
