[package]
name = "rauncher"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
freedesktop-desktop-entry = "0.8.1"
gtk4 = "0.10.3"
nucleo-matcher = "0.3.1"
serde = { version = "1.0.228", features = ["derive"]}
thiserror = "2.0.18"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22",  features = ["env-filter"]}
x11rb = "0.13.2"
