[package]
name = "rauncher"
version = "0.1.0"
edition = "2024"

[features]
default = ["x11"]
x11 = ["dep:x11rb"]
wayland = []

[dependencies]
dirs = "6.0.0"
freedesktop-desktop-entry = "0.8.1"
gtk4 = "0.10.3"
ksni = { version = "0.3.3", features = ["blocking"]}
nucleo-matcher = "0.3.1"
serde = { version = "1.0.228", features = ["derive"]}
thiserror = "2.0.18"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22",  features = ["env-filter"]}
x11rb = { version = "0.13.2", optional = true }
image = "0.25.9"
zbus = { version = "5" , features = ["blocking-api"]}

[dev-dependencies]

