[package]
name = "rauncher"
version = "0.1.0"
edition = "2024"
description = "Application launcher for Linux, supporting X11 and Wayland"
license = "GPL-3.0"
repository = "https://github.com/h3poteto/rauncher"
homepage = "https://github.com/h3poteto/rauncher"

[features]
default = ["x11"]
x11 = ["dep:x11rb", "dep:gdk4-x11"]
wayland = ["dep:gtk4-layer-shell"]

[dependencies]
dirs = "6.0.0"
freedesktop-desktop-entry = "0.8.1"
gtk4 = "0.10.3"
ksni = { version = "0.3.3", features = ["blocking"]}
nucleo-matcher = "0.3.1"
serde = { version = "1.0.228", features = ["derive"]}
thiserror = "2.0.18"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22",  features = ["env-filter"]}
x11rb = { version = "0.13.2", optional = true, features = ["xinerama"] }
gdk4-x11 = { version = "0.11.0", optional = true }
image = "0.25.9"
zbus = { version = "5" , features = ["blocking-api"]}
gtk4-layer-shell = { version = "0.7.1", optional = true}

[package.metadata.deb]
name = "rauncher"
maintainer = "h3poteto"
copyright = "2026, h3poteto"
license-file = ["LICENSE", "0"]
section = "utility"
depends = "$auto"
assets = [
  ["target/release/rauncher", "usr/bin/", "755"],
  ["data/rauncher.desktop", "usr/share/applications/", "644"],
  ["data/icons/hicolor/128x128/apps/rauncher.png", "usr/share/icons/hicolor/128x128/apps/", "644"],
]

[package.metadata.deb.variants.x11]
name = "rauncher-x11"
features = ["x11"]
default-features = false

[package.metadata.deb.variants.wayland]
name = "rauncher-wayland"
features = ["wayland"]
default-features = false
depends = "$auto, libgtk4-layer-shell0"